--- a/style.css
+++ b/style.css
@@ -161,6 +161,17 @@ nav .navlinks li a{
     border-color: #007ced;
 }
 
+.my-text .social i{
+    color: #e5e5e5;
+    font-size: 18px;
+    margin-right: 10px;
+    transition: 0.5s;
+}
+.my-text .social i:hover{
+    color: #007ced;
+    transform: rotate(360deg);
+}
+
 @media(max-width: 930px){
     nav .togglebtn{
         display: initial;
@@ -171,5 +182,50 @@ nav .navlinks li a{
     .click span{
         position: absolute;
         margin-top: 12px;
+    }
+    .click span:first-child{
+        transform: rotate(-40deg);
+    }
+    .click span:nth-child(2){
+        opacity: 0;
+        margin: 0;
+    }
+    .click span:last-child{
+        transform: rotate(45deg);
+        top: 0;
+    }
+    nav .navlinks{
+        position: absolute;
+        top: 110px;
+        right: -60%;
+        bottom: 0;
+        width: 60%;
+        height: 100vh;
+        background-color: #222;
+        z-index: 3;
+        box-shadow: 5px 13px 30px rgba(0,0,0,0.1);
+        transition: 0.5s;
+        padding: 25px 0px;
+    }
+    nav .navlinks li{
+        display: block;
+    }
+    nav .navlinks li a{
+        display: block;
+        margin-bottom: 15px;
+        text-align: center;
+    }
+    nav .navlinks.open{
+        right: 0;
+    }
+}
+
+@media(max-width: 768px){
+    .contanier{
+        flex-direction: column;
+        padding-top: 2rem;
+    }
+    .my-text{
+        padding: 40px 0px;
     }
 }
